<resources>
    <string name="app_name">Login</string>

/*Main Activity*/
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

/*Sign up*/
    <string name="newuser">New Username</string>
    <string name="newpass">New Password</string>
    <string name="done">Done</string>

    /*Wrong Password*/
    <string name="wrongpass">Please enter correct username or password</string>
    <string name="ok">Ok</string>
</resources>
